johnbenedictdelosreyes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  rules:
  - http:
      paths:
      - path: /jb
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
